src/components/Search/Suggest.scss
@use 'sass:map';
@use '../../styles/variables';

.Suggest {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    float: right;

    margin-right: 20px;
    min-width: 200px;
    width: auto;
    transition:
        min-width 0.3s,
        max-width 0.3s;

    .dc-root_focused-search & {
        min-width: 500px;
    }

    &__close {
        display: none;
        flex: none;
        margin-left: 16px;
    }

    &__end {
        display: none;
    }

    &__input {
        & input::placeholder {
            transition: color 0.1s;
        }
    }

    &__Item {
        &__Marker {
            background: var(--g-color-base-neutral-medium);
            padding: 0 3px 1px;
            border-radius: 4px;
        }
    }

    @media (max-width: map.get(variables.$screenBreakpoints, 'md') - 1) {
        margin-right: 0;
        min-width: 36px;
        max-width: 36px;

        &__end {
            display: block;
            color: var(--g-color-text-complementary);
        }

        .dc-root_focused-search & {
            min-width: 100%;
            max-width: 100%;

            &__close,
            &__end {
                display: block;
            }
        }

        &__input {
            :root:not(.dc-root_focused-search) & {
                --g-text-input-placeholder-color: rgba(0, 0, 0, 0);

                & input {
                    padding: 0;
                }

                & > * {
                    border-color: rgba(0, 0, 0, 0);
                }
            }
        }
    }
}

